kubernetes-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "myapp.localdomain"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: myapp
              port:
                number: 80
